# rapilunii

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
hardware/: README.md
hardware/display/example/: 2inch_LCD_test.py
hardware/display/lib/: LCD_0inch96.py  LCD_1inch14.py  LCD_1inch28.py  LCD_1inch3.py  LCD_1inch47.py  LCD_1inch54.py  LCD_1inch69.py  LCD_1inch8.py  LCD_1inch9.py  LCD_2inch4.py  lcdconfig.py
laboite/: main.py
laboite/src/: alltalk_controller.py  display_controller.py  input_controller.py  lunii_controller.py  ollama_controller.py  states.py  voice_controller.py
src/: alltalk_controller.py  display_controller.py  input_controller.py  logging_handler.py  lunii_controller.py  mic_controller.py  ollama_controller.py  recordings_controller.py  states.py  types.py  voice_controller.py
tools/: display_tool.py  input_tool.py  stt_tool.py  tts_tool.py
